--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,12 +1,12 @@
 /* General */
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;700&display=swap");
 
 * {
-   font-family: 'Lato', sans-serif;
+    font-family: "Lato", sans-serif;
 }
 
-h2{
-    font-family: 'Lato', sans-serif;
+h2 {
+    font-family: "Lato", sans-serif;
     font-weight: bold;
 }
 body {
@@ -21,12 +21,39 @@ header {
 .sobre {
     display: flex;
     margin-top: 50px;
-    margin-bottom:30px;
+    margin-bottom: 30px;
 }
 
 #img {
     margin-left: 15px;
-    width: 400px;
+    max-width: 400px;
+}
+
+@media (max-width: 500px) {
+    #img {
+        margin-left: 15px;
+        max-width: 100px;
+    }
+    .nav {
+    font-size: large;
+}
+
+}
+
+#navbar_img {
+    width: 100px;
+}
+@media (min-width: 500px) {
+    .titulos {
+        margin-top: 5px;
+        margin-left: -30px;
+    }
+
+    #titulo_jantar {
+        margin-top: 5px;
+        margin-left: -40px;
+    }
+    
 }
 
 .paragrafos {
@@ -48,22 +75,13 @@ header {
 .eventos1 {
     display: inline;
     margin: 0 auto;
-    padding-right:10px;
-    padding-top:10px;
+    padding-right: 10px;
+    padding-top: 10px;
 }
 
-.eventos1 p{ 
- padding-top:10px;
-}
-
-.titulos{
-  margin-top:5px;
-  margin-left:-30px;
-}
-
-#titulo_jantar{
-  margin-top:5px;
-  margin-left:-40px;
+.eventos1 p {
+  padding-right:2px;
+  padding-top: 10px;
 }
 
 .thumbnail {
