--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -229,6 +229,10 @@ header {
     border-top-right-radius: 10px;
 }
 
+.img_preview{
+    width:100px;
+    margin-top:20px;
+}
 .card .card-date {
     font-size: 12px;
     color: #ccc;
